--- a/react-components03/.vscode/settings.json
+++ b/react-components03/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "files.autoSave": "onFocusChange",
-    "editor.wordWrap": "on"
+    "editor.wordWrap": "on",
+    "cSpell.language": "en,pt-BR"
 }
